# PredANN

./: pyproject.toml
configs/: config.yaml
scripts/: convert_pkl_to_npy.py  preprocess_data.py  replace_audio_with_real.py
src/: preprocessing.py
